src/objects/Lead_Scoring_Bucket_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_API_Field_Name__c</fullName>
        <label>API Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Scoring_Bucket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Scoring Bucket</label>
        <referenceTo>Lead_Scoring_Bucket__c</referenceTo>
        <relationshipName>Lead_Scoring_Data_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_on_record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Scoring Bucket Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Criteria__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Lead_Scoring_Bucket__c</columns>
        <columns>Active__c</columns>
        <columns>Show_on_record__c</columns>
        <columns>Points__c</columns>
        <columns>Value__c</columns>
        <columns>Lead_API_Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lead Scoring Bucket Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Scoring Bucket Criteria</pluralLabel>
    <recordTypes>
        <fullName>Non_Time_Sensitive</fullName>
        <active>true</active>
        <label>Non Time Sensitive</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Sensitive</fullName>
        <active>true</active>
        <label>Time Sensitive</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>API_field_name_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (Time_Sensitive__c = TRUE ||  Show_on_record__c = TRUE) &amp;&amp;  ISBLANK( Lead_API_Field_Name__c ),TRUE,False )</errorConditionFormula>
        <errorDisplayField>Lead_API_Field_Name__c</errorDisplayField>
        <errorMessage>API field name is required for time sensitive fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bucket_is_required_for_Active_Criteria</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Lead_Scoring_Bucket__c )  &amp;&amp;  IF( Active__c == True, True,False)</errorConditionFormula>
        <errorMessage>An active criteria should be related to a Bucket</errorMessage>
    </validationRules>
</CustomObject>